--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minimalism</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="c:\Users\viktoriya\Desktop\new site\PICTURES\Untitled-2.jpg">
-    <link rel="icon" type="image/png" sizes="16x16" href="c:\Users\viktoriya\Desktop\new site\PICTURES\favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="PICTURES/Untitled-2.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="PICTURES/favicon.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -48,7 +48,7 @@
             <div class="card-content">
                 <h2 class="card-title">ЧТО ТАКОЕ МИНИМАЛИЗМ</h2>
                 <p class="card-description">Кратко о минимализме, история возникновения, минимализм в интерьере</p>
-                <a href="file:///C:/Users/viktoriya/Desktop/new%20site/%D0%9C%D0%98%D0%9D%D0%98%D0%9C%D0%90%D0%9B%D0%98%D0%97%D0%9C.html" class="read-more">подробнее</a>
+                <a href="МИНИМАЛИЗМ.html" class="read-more">подробнее</a>
             </div>
         </div>
         <div class="card">
@@ -56,7 +56,7 @@
             <div class="card-content">
                 <h2 class="card-title">ЛЕГКИЙ МИНИМАЛИЗМ</h2>
                 <p class="card-description">простые лайфхаки для уюта и свободы</p>
-                <a href="file:///C:/Users/viktoriya/Desktop/new%20site/%D0%9B%D0%95%D0%93%D0%9A%D0%98%D0%99%20%D0%9C%D0%98%D0%9D%D0%98%D0%9C%D0%90%D0%9B%D0%98%D0%97%D0%9C.html#" class="read-more">подробнее</a>
+                <a href="ЛЕГКИЙ МИНИМАЛИЗМ.html" class="read-more">подробнее</a>
             </div>
         </div>
         <div class="card">
@@ -72,7 +72,7 @@
             <div class="card-content">
                 <h2 class="card-title">НЕ МИНИМАЛИСТИЧНЫЕ КАРТИНЫ</h2>
                 <p class="card-description">описание работы</p>
-                <a href="file:///C:/Users/viktoriya/Desktop/new%20site/%D0%9D%D0%95%20%D0%9C%D0%98%D0%9D%D0%98%D0%9C%D0%90%D0%9B%D0%98%D0%A1%D0%A2%D0%98%D0%A7%D0%9D%D0%AB%D0%95%20%D0%9A%D0%90%D0%A0%D0%A2%D0%98%D0%9D%D0%AB.html" class="read-more">подробнее</a>
+                <a href="НЕ МИНИМАЛИСТИЧНЫЕ КАРТИНЫ.html" class="read-more">подробнее</a>
             </div>
         </div>
     </div>
