--- a/ЛЕГКИЙ МИНИМАЛИЗМ.html
+++ b/ЛЕГКИЙ МИНИМАЛИЗМ.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Легкий минимализм</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="c:\Users\viktoriya\Desktop\new site\PICTURES\Untitled-2.jpg">
-    <link rel="icon" type="image/png" sizes="16x16" href="c:\Users\viktoriya\Desktop\new site\PICTURES\favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="PICTURES/Untitled-2.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="PICTURES/favicon.png">
     <link rel="stylesheet" href="STYLES2.css">
 </head>
 <body>
     <div class="container">
-        <a href="file:///C:/Users/viktoriya/Desktop/new%20site/Untitled-1.html#" class="back-button">←</a>
+        <a href="index.html" class="back-button">←</a>
         
         <header class="header">
             <h1>Легкий минимализм:<br>простые лайфхаки для уюта и свободы</h1>
