--- a/МИНИМАЛИЗМ.html
+++ b/МИНИМАЛИЗМ.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Что такое минимализм</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="c:\Users\viktoriya\Desktop\new site\PICTURES\Untitled-2.jpg">
-    <link rel="icon" type="image/png" sizes="16x16" href="c:\Users\viktoriya\Desktop\new site\PICTURES\favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="PICTURES/Untitled-2.jpgPICTURES/Untitled-2.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="PICTURES/favicon.png">
     <link rel="stylesheet" href="styles1.css">
 
 </head>
 <body>
     <div class="container">
-        <a href="file:///C:/Users/viktoriya/Desktop/new%20site/Untitled-1.html#" class="back-button">←</a>
+        <a href="index.html" class="back-button">←</a>
         
         <h1>Что такое минимализм</h1>
         
@@ -103,16 +103,16 @@
                 <div class="slider-container">
                     <div class="slider">
                         <div class="slide">
-                            <img src="c:\Users\viktoriya\Desktop\new site\PICTURES\1\PD_1318_MAIN.jpg" alt="Barcelona Chair">
+                            <img src="PICTURES/1/PD_1318_MAIN.jpg" alt="Barcelona Chair">
                         </div>
                         <div class="slide">
-                            <img src="c:\Users\viktoriya\Desktop\new site\PICTURES\1\271865b6cf531.jpg" alt="LC2 Chair">
+                            <img src="PICTURES/1/271865b6cf531.jpg" alt="LC2 Chair">
                         </div>
                         <div class="slide">
-                            <img src="c:\Users\viktoriya\Desktop\new site\PICTURES\1\OIP.jpg" alt="Eames Lounge Chair">
+                            <img src="PICTURES/1/OIP.jpg" alt="Eames Lounge Chair">
                         </div>
                         <div class="slide">
-                            <img src="c:\Users\viktoriya\Desktop\new site\PICTURES\1\ec47e263-9859-4304-8e84-7be662ae6ce0.021834dc16325b39d0f5cc2ca3739edd.webp" alt="Shell Chair">
+                            <img src="PICTURES/1/ec47e263-9859-4304-8e84-7be662ae6ce0.021834dc16325b39d0f5cc2ca3739edd.webp" alt="Shell Chair">
                         </div>
                     </div>
                     <div class="slider-nav">
@@ -164,7 +164,7 @@
                 </div>
 
                 <div class="interior-image-container">
-                    <img src="c:\Users\viktoriya\Desktop\new site\PICTURES\1\viz_08-1200x-fd3.jpg"
+                    <img src="PICTURES/1/viz_08-1200x-fd3.jpg"
                          alt="Минималистичный интерьер кухни"
                          class="interior-image">
                     <p class="image-credit">дизайн квартиры от студии "ZROBIM architects"</p>
