--- a/НЕ МИНИМАЛИСТИЧНЫЕ КАРТИНЫ.html
+++ b/НЕ МИНИМАЛИСТИЧНЫЕ КАРТИНЫ.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>НЕ МИНИМАЛИСТИЧНЫЕ КАРТИНЫ</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="c:\Users\viktoriya\Desktop\new site\PICTURES\Untitled-2.jpg">
-    <link rel="icon" type="image/png" sizes="16x16" href="c:\Users\viktoriya\Desktop\new site\PICTURES\favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="PICTURES/Untitled-2.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="PICTURES/favicon.png">
     <link rel="stylesheet" href="styles4.css">
 </head>
 <body></body>
 <div class="container">
-    <a href="file:///C:/Users/viktoriya/Desktop/new%20site/Untitled-1.html#" class="back-button">←</a>
+    <a href="index.html" class="back-button">←</a>
     
     <header class="header">
         <h1>Не минималистичные картины</h1>
@@ -18,22 +18,22 @@
     </header>
     <div class="grid">
         <div class="card">
-            <img src="c:\Users\viktoriya\Desktop\new site\PICTURES\sity.jpg" alt="sity">
+            <img src="PICTURES/sity.jpg" alt="sity">
             <div class="card-content">
             </div>
      </div>
         <div class="card">
-            <img src="c:\Users\viktoriya\Desktop\new site\PICTURES\garden.jpg" alt="garden">
+            <img src="PICTURES/garden.jpg" alt="garden">
             <div class="card-content">
             </div>
         </div>
         <div class="card">
-            <img src="c:\Users\viktoriya\Desktop\new site\PICTURES\forest.jpg" alt="forest">
+            <img src="PICTURES/forest.jpg" alt="forest">
             <div class="card-content">
             </div>
         </div>
         <div class="card">
-            <img src="c:\Users\viktoriya\Desktop\new site\PICTURES\flowers.jpg" alt="flowers">
+            <img src="PICTURES/flowers.jpg" alt="flowers">
             <div class="card-content">
             </div>
         </div>
