--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="c:\Users\viktoriya\Desktop\new site\PICTURES\sand_shades-02-living-2-1200x-fd3.jpg" alt="Living room">
+            <img src="PICTURES/sand_shades-02-living-2-1200x-fd3.jpg" alt="Living room">
             <div class="card-content">
                 <h2 class="card-title">НЕ МИНИМАЛИСТИЧНЫЕ КАРТИНЫ</h2>
                 <p class="card-description">описание работы</p>
