--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <div class="nemnogoonas" id="nemnogoonas">
         <div class="textik">
-            <h4 class="small-header">Немног о нас</h4>
+            <h4 class="small-header">Немного о нас</h4>
             <h2 class="large-header">Продуманный дизайн</h2>
             <p class="text-neutrali">
                 Мы создаем интерьеры, где минимализм сочетается с уютом и функциональностью. В наших проектах мы
